[gd_scene load_steps=85 format=3 uid="uid://xj5kikjy1d8l"]

[ext_resource type="PackedScene" uid="uid://bdp6vlymmmpu3" path="res://Scenes/Allys/SummonAllys/summon_ally_class.tscn" id="1_2l7ri"]
[ext_resource type="Script" path="res://Scripts/Allys/SummonAllys/undead_knight.gd" id="2_3ft8p"]
[ext_resource type="Script" path="res://Scripts/Datas/UnitData.gd" id="2_3goqf"]
[ext_resource type="Texture2D" uid="uid://cu2f602ookavg" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_00.png" id="4_b50eo"]
[ext_resource type="Texture2D" uid="uid://btv6r5mk8pj0f" path="res://Assets/Images/UI/InformationBar/UndeadKnight.png" id="4_mkiul"]
[ext_resource type="Texture2D" uid="uid://chrbst852pwaq" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_01.png" id="5_gief1"]
[ext_resource type="Texture2D" uid="uid://c8yp3xwy8flmp" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_02.png" id="6_wam3e"]
[ext_resource type="Texture2D" uid="uid://d1ww3hq0pg7c0" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_03.png" id="7_cd15f"]
[ext_resource type="Texture2D" uid="uid://tk10bu5ahgpe" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_04.png" id="8_2iyde"]
[ext_resource type="Texture2D" uid="uid://blhn1byj5rvtb" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_05.png" id="9_y1n71"]
[ext_resource type="Texture2D" uid="uid://bymamjxp2q45m" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_06.png" id="10_rdur5"]
[ext_resource type="Texture2D" uid="uid://bwjstwgqy60cw" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_07.png" id="11_jdg7f"]
[ext_resource type="Texture2D" uid="uid://ppkj812jtjp4" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_08.png" id="12_yn5tn"]
[ext_resource type="Texture2D" uid="uid://uq7pd6uxxkur" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_09.png" id="13_qkggm"]
[ext_resource type="Texture2D" uid="uid://bkq7eweibw8ll" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_10.png" id="14_fxft7"]
[ext_resource type="Texture2D" uid="uid://yb532dwmk5kb" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_11.png" id="15_7wnwi"]
[ext_resource type="Texture2D" uid="uid://duhnfe8yub60v" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_12.png" id="16_tudjm"]
[ext_resource type="Texture2D" uid="uid://cspav8mmdvdk2" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_13.png" id="17_l2dvw"]
[ext_resource type="Texture2D" uid="uid://ch4vbv2e5itk3" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_14.png" id="18_qpabk"]
[ext_resource type="Texture2D" uid="uid://dscyq0s77sa7s" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_15.png" id="19_yihmu"]
[ext_resource type="Texture2D" uid="uid://bph2757ibbet6" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_16.png" id="20_dvtf1"]
[ext_resource type="Texture2D" uid="uid://caf2evtdvjqg0" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_17.png" id="21_u63qd"]
[ext_resource type="Texture2D" uid="uid://dsoqyqn27oqxg" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_18.png" id="22_qvm1x"]
[ext_resource type="Texture2D" uid="uid://t6d8pq4eib2k" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_19.png" id="23_kas0s"]
[ext_resource type="Texture2D" uid="uid://b28u2nx4fa14m" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_20.png" id="24_uteud"]
[ext_resource type="Texture2D" uid="uid://cp3yfuqsvbi50" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_21.png" id="25_274c3"]
[ext_resource type="Texture2D" uid="uid://df8voqugiowfc" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_22.png" id="26_8fln4"]
[ext_resource type="Texture2D" uid="uid://bai731lf1s2n4" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_23.png" id="27_quo21"]
[ext_resource type="Texture2D" uid="uid://ig7xnkv13j8l" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_24.png" id="28_rg2oh"]
[ext_resource type="Texture2D" uid="uid://b2cj1g167lb82" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_25.png" id="29_kvsxb"]
[ext_resource type="Texture2D" uid="uid://bd7y3diaxuw1o" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_26.png" id="30_144ai"]
[ext_resource type="Texture2D" uid="uid://bclivur65yqjp" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_27.png" id="31_sxtwr"]
[ext_resource type="Texture2D" uid="uid://cdywyysncngon" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_28.png" id="32_c1ki8"]
[ext_resource type="Texture2D" uid="uid://b0eh5tbk1s1fb" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_29.png" id="33_jq7nd"]
[ext_resource type="Texture2D" uid="uid://s1m2j2jcsqh3" path="res://Assets/Animations/SummonAllys/UndeadKnight/attack_30.png" id="34_86kwa"]
[ext_resource type="Texture2D" uid="uid://bhu4ge0p6aiup" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_00.png" id="35_2qrrm"]
[ext_resource type="Texture2D" uid="uid://daiu7mids8vft" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_01.png" id="36_a8tly"]
[ext_resource type="Texture2D" uid="uid://byrdl5nm23rbd" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_02.png" id="37_4kpqj"]
[ext_resource type="Texture2D" uid="uid://cysi6kflq2480" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_03.png" id="38_3qc5r"]
[ext_resource type="Texture2D" uid="uid://ccvq3akfbnd00" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_04.png" id="39_el80i"]
[ext_resource type="Texture2D" uid="uid://do3monn16k2ma" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_05.png" id="40_6m4fj"]
[ext_resource type="Texture2D" uid="uid://b7k166i8c8wiy" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_06.png" id="41_e278c"]
[ext_resource type="Texture2D" uid="uid://b42t8ylj453v1" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_07.png" id="42_0ojla"]
[ext_resource type="Texture2D" uid="uid://dbf6w4wsc804l" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_08.png" id="43_duisn"]
[ext_resource type="Texture2D" uid="uid://cufyvxboeqa65" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_09.png" id="44_bsn1m"]
[ext_resource type="Texture2D" uid="uid://dnsfmlathe3e5" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_10.png" id="45_xpes4"]
[ext_resource type="Texture2D" uid="uid://c78qgcnf2kms2" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_11.png" id="46_myp8f"]
[ext_resource type="Texture2D" uid="uid://dfbk5jhjnb55w" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_12.png" id="47_yvx6f"]
[ext_resource type="Texture2D" uid="uid://2s8arwxxfs1h" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_13.png" id="48_jqdxv"]
[ext_resource type="Texture2D" uid="uid://c8gl26hk3rrat" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_14.png" id="49_7rq4u"]
[ext_resource type="Texture2D" uid="uid://p3bdbs03ae4k" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_15.png" id="50_8ooxw"]
[ext_resource type="Texture2D" uid="uid://yfq1ewydxrnw" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_16.png" id="51_g1mo6"]
[ext_resource type="Texture2D" uid="uid://cmlrjk63evrp7" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_17.png" id="52_0g4su"]
[ext_resource type="Texture2D" uid="uid://x5p4tilv0qeo" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_18.png" id="53_nrldh"]
[ext_resource type="Texture2D" uid="uid://hc1gwpdscwuc" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_19.png" id="54_1c2e0"]
[ext_resource type="Texture2D" uid="uid://bj4pua8mqdo2c" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_20.png" id="55_62lj7"]
[ext_resource type="Texture2D" uid="uid://uecgxvuc7psq" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_21.png" id="56_10jtx"]
[ext_resource type="Texture2D" uid="uid://ckti7m6uqm5sg" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_22.png" id="57_c6cwr"]
[ext_resource type="Texture2D" uid="uid://bdos3bandsioo" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_23.png" id="58_67xui"]
[ext_resource type="Texture2D" uid="uid://5aqfotd0ylfn" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_24.png" id="59_e0sux"]
[ext_resource type="Texture2D" uid="uid://cmwldno6t4t8a" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_25.png" id="60_af3ls"]
[ext_resource type="Texture2D" uid="uid://c4cqibt8upxl1" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_26.png" id="61_gtixw"]
[ext_resource type="Texture2D" uid="uid://cnbq6dtexmeem" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_27.png" id="62_hnh51"]
[ext_resource type="Texture2D" uid="uid://bm25il5vui423" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_28.png" id="63_n51pi"]
[ext_resource type="Texture2D" uid="uid://bock6vwwncrb5" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_29.png" id="64_odvh3"]
[ext_resource type="Texture2D" uid="uid://cgwjjgnlgy3e1" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_30.png" id="65_3mqe8"]
[ext_resource type="Texture2D" uid="uid://llp7pjrfrevh" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_31.png" id="66_gq4p6"]
[ext_resource type="Texture2D" uid="uid://no6d43jepwk5" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_32.png" id="67_fhgk7"]
[ext_resource type="Texture2D" uid="uid://dr8r7rvfg312c" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_33.png" id="68_i2nms"]
[ext_resource type="Texture2D" uid="uid://bo5mgwggxyfff" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_34.png" id="69_jwu1r"]
[ext_resource type="Texture2D" uid="uid://yjxiysuyf62l" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_35.png" id="70_r0sm1"]
[ext_resource type="Texture2D" uid="uid://b3a4k4r5x24nh" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_36.png" id="71_odeis"]
[ext_resource type="Texture2D" uid="uid://d2ihnb5i34jy1" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_37.png" id="72_g5uxy"]
[ext_resource type="Texture2D" uid="uid://c1nbpe5cnpi5g" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_38.png" id="73_6s7og"]
[ext_resource type="Texture2D" uid="uid://bh2e3tmacjnf1" path="res://Assets/Animations/SummonAllys/UndeadKnight/move_39.png" id="74_qr8jk"]
[ext_resource type="Texture2D" uid="uid://ccglhhifm554s" path="res://Assets/Images/Effects/鼓舞光环.png" id="76_0eg3j"]
[ext_resource type="Shader" path="res://Assets/Shaders/hue_color.gdshader" id="76_y175v"]

[sub_resource type="Resource" id="Resource_ekc3c"]
script = ExtResource("2_3goqf")
health = 80
dodge_rate = 0.0
near_damage_low = 8
near_damage_high = 10
near_attack_speed = 1.5
near_hit_rate = 1.0
far_damage_low = 0
far_damage_high = 0
far_attack_speed = 0.0
far_damage_range = 0
armor = 0.0
physic_immune = false
magic_defence = 0.0
magic_immune = false
explode_defence = 0.0
explode_immune = false
total_defence_rate = 0.9
unit_move_speed = 1.0

[sub_resource type="Resource" id="Resource_no04b"]
script = ExtResource("2_3goqf")
health = 100
dodge_rate = 0.0
near_damage_low = 12
near_damage_high = 16
near_attack_speed = 1.5
near_hit_rate = 1.0
far_damage_low = 0
far_damage_high = 0
far_attack_speed = 0.0
far_damage_range = 0
armor = 0.0
physic_immune = false
magic_defence = 0.0
magic_immune = false
explode_defence = 0.0
explode_immune = false
total_defence_rate = 0.9
unit_move_speed = 1.0

[sub_resource type="Resource" id="Resource_ia38y"]
script = ExtResource("2_3goqf")
health = 120
dodge_rate = 0.0
near_damage_low = 16
near_damage_high = 22
near_attack_speed = 1.5
near_hit_rate = 1.0
far_damage_low = 0
far_damage_high = 0
far_attack_speed = 0.0
far_damage_range = 0
armor = 0.0
physic_immune = false
magic_defence = 0.0
magic_immune = false
explode_defence = 0.0
explode_immune = false
total_defence_rate = 0.9
unit_move_speed = 1.0

[sub_resource type="Resource" id="Resource_oajsu"]
script = ExtResource("2_3goqf")
health = 140
dodge_rate = 0.0
near_damage_low = 20
near_damage_high = 28
near_attack_speed = 1.5
near_hit_rate = 1.0
far_damage_low = 0
far_damage_high = 0
far_attack_speed = 0.0
far_damage_range = 0
armor = 0.0
physic_immune = false
magic_defence = 0.0
magic_immune = false
explode_defence = 0.0
explode_immune = false
total_defence_rate = 0.9
unit_move_speed = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_cxsrb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_b50eo")
}, {
"duration": 1.0,
"texture": ExtResource("5_gief1")
}, {
"duration": 1.0,
"texture": ExtResource("6_wam3e")
}, {
"duration": 1.0,
"texture": ExtResource("7_cd15f")
}, {
"duration": 1.0,
"texture": ExtResource("8_2iyde")
}, {
"duration": 1.0,
"texture": ExtResource("9_y1n71")
}, {
"duration": 1.0,
"texture": ExtResource("10_rdur5")
}, {
"duration": 1.0,
"texture": ExtResource("11_jdg7f")
}, {
"duration": 1.0,
"texture": ExtResource("12_yn5tn")
}, {
"duration": 1.0,
"texture": ExtResource("13_qkggm")
}, {
"duration": 1.0,
"texture": ExtResource("14_fxft7")
}, {
"duration": 1.0,
"texture": ExtResource("15_7wnwi")
}, {
"duration": 1.0,
"texture": ExtResource("16_tudjm")
}, {
"duration": 1.0,
"texture": ExtResource("17_l2dvw")
}, {
"duration": 1.0,
"texture": ExtResource("18_qpabk")
}, {
"duration": 1.0,
"texture": ExtResource("19_yihmu")
}, {
"duration": 1.0,
"texture": ExtResource("20_dvtf1")
}, {
"duration": 1.0,
"texture": ExtResource("21_u63qd")
}, {
"duration": 1.0,
"texture": ExtResource("22_qvm1x")
}, {
"duration": 1.0,
"texture": ExtResource("23_kas0s")
}, {
"duration": 1.0,
"texture": ExtResource("24_uteud")
}, {
"duration": 1.0,
"texture": ExtResource("25_274c3")
}, {
"duration": 1.0,
"texture": ExtResource("26_8fln4")
}, {
"duration": 1.0,
"texture": ExtResource("27_quo21")
}, {
"duration": 1.0,
"texture": ExtResource("28_rg2oh")
}, {
"duration": 1.0,
"texture": ExtResource("29_kvsxb")
}, {
"duration": 1.0,
"texture": ExtResource("30_144ai")
}, {
"duration": 1.0,
"texture": ExtResource("31_sxtwr")
}, {
"duration": 1.0,
"texture": ExtResource("32_c1ki8")
}, {
"duration": 1.0,
"texture": ExtResource("33_jq7nd")
}, {
"duration": 1.0,
"texture": ExtResource("34_86kwa")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_b50eo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_2qrrm")
}, {
"duration": 1.0,
"texture": ExtResource("36_a8tly")
}, {
"duration": 1.0,
"texture": ExtResource("37_4kpqj")
}, {
"duration": 1.0,
"texture": ExtResource("38_3qc5r")
}, {
"duration": 1.0,
"texture": ExtResource("39_el80i")
}, {
"duration": 1.0,
"texture": ExtResource("40_6m4fj")
}, {
"duration": 1.0,
"texture": ExtResource("41_e278c")
}, {
"duration": 1.0,
"texture": ExtResource("42_0ojla")
}, {
"duration": 1.0,
"texture": ExtResource("43_duisn")
}, {
"duration": 1.0,
"texture": ExtResource("44_bsn1m")
}, {
"duration": 1.0,
"texture": ExtResource("45_xpes4")
}, {
"duration": 1.0,
"texture": ExtResource("46_myp8f")
}, {
"duration": 1.0,
"texture": ExtResource("47_yvx6f")
}, {
"duration": 1.0,
"texture": ExtResource("48_jqdxv")
}, {
"duration": 1.0,
"texture": ExtResource("49_7rq4u")
}, {
"duration": 1.0,
"texture": ExtResource("50_8ooxw")
}, {
"duration": 1.0,
"texture": ExtResource("51_g1mo6")
}, {
"duration": 1.0,
"texture": ExtResource("52_0g4su")
}, {
"duration": 1.0,
"texture": ExtResource("53_nrldh")
}, {
"duration": 1.0,
"texture": ExtResource("54_1c2e0")
}, {
"duration": 1.0,
"texture": ExtResource("55_62lj7")
}, {
"duration": 1.0,
"texture": ExtResource("56_10jtx")
}, {
"duration": 1.0,
"texture": ExtResource("57_c6cwr")
}, {
"duration": 1.0,
"texture": ExtResource("58_67xui")
}, {
"duration": 1.0,
"texture": ExtResource("59_e0sux")
}, {
"duration": 1.0,
"texture": ExtResource("60_af3ls")
}, {
"duration": 1.0,
"texture": ExtResource("61_gtixw")
}, {
"duration": 1.0,
"texture": ExtResource("62_hnh51")
}, {
"duration": 1.0,
"texture": ExtResource("63_n51pi")
}, {
"duration": 1.0,
"texture": ExtResource("64_odvh3")
}, {
"duration": 1.0,
"texture": ExtResource("65_3mqe8")
}, {
"duration": 1.0,
"texture": ExtResource("66_gq4p6")
}, {
"duration": 1.0,
"texture": ExtResource("67_fhgk7")
}, {
"duration": 1.0,
"texture": ExtResource("68_i2nms")
}, {
"duration": 1.0,
"texture": ExtResource("69_jwu1r")
}, {
"duration": 1.0,
"texture": ExtResource("70_r0sm1")
}, {
"duration": 1.0,
"texture": ExtResource("71_odeis")
}, {
"duration": 1.0,
"texture": ExtResource("72_g5uxy")
}, {
"duration": 1.0,
"texture": ExtResource("73_6s7og")
}, {
"duration": 1.0,
"texture": ExtResource("74_qr8jk")
}],
"loop": true,
"name": &"move",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_307yl"]
radius = 73.9444

[sub_resource type="ShaderMaterial" id="ShaderMaterial_24qga"]
shader = ExtResource("76_y175v")
shader_parameter/hue_shift = 0.368

[node name="UndeadKnight" groups=["no_live", "undead"] instance=ExtResource("1_2l7ri")]
script = ExtResource("2_3ft8p")
unit_list = Array[ExtResource("2_3goqf")]([SubResource("Resource_ekc3c"), SubResource("Resource_no04b"), SubResource("Resource_ia38y"), SubResource("Resource_oajsu")])
heal_speed_list = Array[int]([4, 5, 6, 7])
ally_name = "不死骑士"
ally_texture = ExtResource("4_mkiul")
rebirth_time = 0

[node name="AllySprite" parent="UnitBody" index="0"]
modulate = Color(1, 1, 1, 0.905882)
position = Vector2(-5, -95)
sprite_frames = SubResource("SpriteFrames_cxsrb")
animation = &"move"
autoplay = "move"
flip_h = true

[node name="DiznessArea" type="Area2D" parent="UnitBody" index="8"]
scale = Vector2(1.2, 1.2)
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitBody/DiznessArea" index="0"]
scale = Vector2(5, 3.5)
shape = SubResource("CircleShape2D_307yl")
debug_color = Color(1, 1, 1, 0)

[node name="鼓舞光环" type="Sprite2D" parent="UnitBody" index="12"]
z_index = -1
material = SubResource("ShaderMaterial_24qga")
position = Vector2(0, -5)
scale = Vector2(1.58794, 1.58794)
texture = ExtResource("76_0eg3j")
region_enabled = true
region_rect = Rect2(20, 24, 110, 63)

[node name="ExistingTimer" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="timeout" from="ExistingTimer" to="." method="_on_existing_timer_timeout"]
